--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.0",
     "@tabler/icons-react": "^3.14.0",
-    "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
-    "react-scroll": "^1.9.0",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
+    "react-toastify": "^11.0.3",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
